--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "a290aa40ed9d7f150c7d22cde6bb2699f02a70c5"
 yandex_site_verification :
 baidu_site_verification  :
 
