--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "|"
 subtitle                 : "init() → shift();"
 name                     : "Whendy"
 description              : "Mono.log"
-url                      : "https://cwhendy.github.io"
+url                      : "https://Mono.log.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
