--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  : "a290aa40ed9d7f150c7d22cde6bb2699f02a70c5"
+naver_site_verification  : "9c09a3189f642bda3808e10c43584cb6c1cc5f84"
 yandex_site_verification :
 baidu_site_verification  :
 
@@ -133,7 +133,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/cwhendy"
+      url: "https://github.com/MonoTrace"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/monoshift_official"
