--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
-  - title: "Category"
+  - title: "카테고리"
     url: /categories/
-  - title: "Tag"
-    url: /tags/
-  - title: "Search"
+  - title: "연도별"
+    url: /year/
+  - title: "검색"
     url: /search/
 
 docs:
@@ -12,11 +12,9 @@ docs:
     children:
     - title: "Category"
       url: /categories/
-    - title: "Tag"
-      url: /tags/
-
+      
 counts:
   - title: "카테고리"
     use: true
   - title: "태그"
-    use: true
+    use: false
